fix: dark mode code

--- a/src/_postcss/roots/_theme.pcss
+++ b/src/_postcss/roots/_theme.pcss
@@ -14,4 +14,10 @@ body {
     background-color: var(--color-bg);
     color: var(--color-text);
   }
+
+  .c-post code:not([class]),
+  .c-post kbd:not([class]),
+  .c-post samp:not([class]) {
+    background-color: var(--color-gray-500);
+  }
 }
